--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,7 +5,6 @@ LOG_PATTERN=[%d{yyyy-MM-dd HH:mm:ss.SSS}] log4j%X{context} - %5p [%t] --- %m%n
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-
 log4j.appender.file.File=/tmp/microLendingApp.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
@@ -17,4 +16,4 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=${LOG_PATTERN}
 
-log4j.category.org.homework.app.loan=DEBUG
+log4j.category.org.homework.app.loan=DEBUG, console
