--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,4 +16,5 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=${LOG_PATTERN}
 
-log4j.category.org.homework.app.loan=DEBUG, console
+log4j.additivity.org.microlending.app.loan=false
+log4j.category.org.microlending.app.loan=DEBUG, console
