--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, console
+log4j.rootLogger=INFO, file
 
 LOG_PATTERN=[%d{yyyy-MM-dd HH:mm:ss.SSS}] log4j%X{context} - %5p [%t] --- %m%n
 
@@ -17,4 +17,4 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=${LOG_PATTERN}
 
 log4j.additivity.org.microlending.app.loan=false
-log4j.category.org.microlending.app.loan=DEBUG, console
+log4j.category.org.microlending.app.loan=DEBUG, file
