--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/build/
-/bin/
-/.gradle/
-/.settings/
-/.classpath
-/.project
+/**/.idea
+/**/.classpath
+/**/.eclipse
+/**/target
+/**/.project
+/**/.settings
+/**/*.iml
